Features/List-box/XMLParser.py
# Generated from XML.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class XMLParser ( Parser ):

    grammarFileName = "XML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'/>'", "'='", "'<'", "'</'", "'<!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "OPEN_TAG", 
                      "CLOSE_TAG", "EMPTY_TAG", "TEXT", "NAME", "STRING", 
                      "ENTITY", "WS" ]

    RULE_xml = 0
    RULE_element = 1
    RULE_content = 2
    RULE_startTag = 3
    RULE_endTag = 4
    RULE_emptyTag = 5
    RULE_attribute = 6

    ruleNames =  [ "xml", "element", "content", "startTag", "endTag", "emptyTag", 
                   "attribute" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    OPEN_TAG=3
    CLOSE_TAG=4
    EMPTY_TAG=5
    TEXT=6
    NAME=7
    STRING=8
    ENTITY=9
    WS=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class XmlContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self):
            return self.getTypedRuleContext(XMLParser.ElementContext,0)


        def getRuleIndex(self):
            return XMLParser.RULE_xml

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXml" ):
                listener.enterXml(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXml" ):
                listener.exitXml(self)




    def xml(self):

        localctx = XMLParser.XmlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_xml)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.element()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def startTag(self):
            return self.getTypedRuleContext(XMLParser.StartTagContext,0)


        def content(self):
            return self.getTypedRuleContext(XMLParser.ContentContext,0)


        def endTag(self):
            return self.getTypedRuleContext(XMLParser.EndTagContext,0)


        def emptyTag(self):
            return self.getTypedRuleContext(XMLParser.EmptyTagContext,0)


        def getRuleIndex(self):
            return XMLParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = XMLParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_element)
        try:
            self.state = 21
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 16
                self.startTag()
                self.state = 17
                self.content()
                self.state = 18
                self.endTag()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 20
                self.emptyTag()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self):
            return self.getTypedRuleContext(XMLParser.ElementContext,0)


        def TEXT(self):
            return self.getToken(XMLParser.TEXT, 0)

        def getRuleIndex(self):
            return XMLParser.RULE_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)




    def content(self):

        localctx = XMLParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_content)
        try:
            self.state = 25
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XMLParser.OPEN_TAG]:
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.element()
                pass
            elif token in [XMLParser.TEXT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.match(XMLParser.TEXT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartTagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_TAG(self):
            return self.getToken(XMLParser.OPEN_TAG, 0)

        def CLOSE_TAG(self):
            return self.getToken(XMLParser.CLOSE_TAG, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(XMLParser.AttributeContext,i)


        def getRuleIndex(self):
            return XMLParser.RULE_startTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartTag" ):
                listener.enterStartTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartTag" ):
                listener.exitStartTag(self)




    def startTag(self):

        localctx = XMLParser.StartTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_startTag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(XMLParser.OPEN_TAG)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==XMLParser.NAME:
                self.state = 28
                self.attribute()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(XMLParser.CLOSE_TAG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndTagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLOSE_TAG(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.CLOSE_TAG)
            else:
                return self.getToken(XMLParser.CLOSE_TAG, i)

        def NAME(self):
            return self.getToken(XMLParser.NAME, 0)

        def getRuleIndex(self):
            return XMLParser.RULE_endTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndTag" ):
                listener.enterEndTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndTag" ):
                listener.exitEndTag(self)




    def endTag(self):

        localctx = XMLParser.EndTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_endTag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(XMLParser.CLOSE_TAG)
            self.state = 37
            self.match(XMLParser.NAME)
            self.state = 38
            self.match(XMLParser.CLOSE_TAG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmptyTagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_TAG(self):
            return self.getToken(XMLParser.OPEN_TAG, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(XMLParser.AttributeContext,i)


        def WS(self):
            return self.getToken(XMLParser.WS, 0)

        def getRuleIndex(self):
            return XMLParser.RULE_emptyTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyTag" ):
                listener.enterEmptyTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyTag" ):
                listener.exitEmptyTag(self)




    def emptyTag(self):

        localctx = XMLParser.EmptyTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_emptyTag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(XMLParser.OPEN_TAG)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==XMLParser.NAME:
                self.state = 41
                self.attribute()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==XMLParser.WS:
                self.state = 47
                self.match(XMLParser.WS)


            self.state = 50
            self.match(XMLParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(XMLParser.NAME, 0)

        def STRING(self):
            return self.getToken(XMLParser.STRING, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.WS)
            else:
                return self.getToken(XMLParser.WS, i)

        def getRuleIndex(self):
            return XMLParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = XMLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(XMLParser.NAME)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==XMLParser.WS:
                self.state = 53
                self.match(XMLParser.WS)


            self.state = 56
            self.match(XMLParser.T__1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==XMLParser.WS:
                self.state = 57
                self.match(XMLParser.WS)


            self.state = 60
            self.match(XMLParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





